Add docker compose yaml file and selenium grid CI yaml file